Polishing API documentation
